<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/display_text"
        android:textSize="26sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/txtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >


        <RadioButton
            android:id="@+id/radioUpperCase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uppercase"
            android:textSize="12sp"
            />

        <RadioButton
            android:id="@+id/radioLowerCase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowercase"
            android:textSize="12sp"
            />

        <RadioButton
            android:id="@+id/radioIntermediateCase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intermediatecase"
            android:textSize="12sp"
            />

    </RadioGroup>


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/check_me"
        android:textSize="20sp"
        android:textColor="@color/pink_Shade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        />

    <Button
        android:id="@+id/finishBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:backgroundTint="@color/pink_Shade"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>